--- a/projects/ui-lib/src/lib/components/table/table.component.html
+++ b/projects/ui-lib/src/lib/components/table/table.component.html
@@ -13,7 +13,7 @@
   }
 </div>
 
-<div class="scroll" #scrollContainer (scroll)="onScroll()" [class.with-checkboxes]="config().selectableRows === 'multiple'">
+<div class="scroll" #scrollContainer (scroll)="onScroll($event)" [class.with-checkboxes]="config().selectableRows === 'multiple'">
   <table [class.with-options]="config().options?.length">
     <thead>
       @if (config().tableHeadings.length > 0) {
